--- a/src/styles.css
+++ b/src/styles.css
@@ -74,6 +74,7 @@ button {
 button:hover {
   border-color: #396cd8;
 }
+
 button:active {
   border-color: #396cd8;
   background-color: #e8e8e8;
@@ -103,7 +104,16 @@ button {
     color: #ffffff;
     background-color: #0f0f0f98;
   }
+
   button:active {
     background-color: #0f0f0f69;
   }
+}
+
+/* Disable scrolling */
+html,
+body {
+  margin: 0;
+  height: 100%;
+  overflow: hidden
 }
